--- a/src/Component/Home/Banner/Banner.css
+++ b/src/Component/Home/Banner/Banner.css
@@ -1,6 +1,8 @@
 .bg-img{
     background-image: url("../../../images/bg.jpg");
     background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
     
     
 }
@@ -9,5 +11,8 @@
     color: whitesmoke;
     align-items: center;
     justify-content: center;
-    margin: 100px;
+    padding-top: 200px;
+}
+.bg-img h3{
+    color: whitesmoke;
 }
