--- a/src/Component/Home/Footer/Footer.css
+++ b/src/Component/Home/Footer/Footer.css
@@ -1,5 +1,8 @@
 .bg-color{
     background-color: #1f1f1f;
+    padding-top: 50px;
+    margin-top: 50px;
+    position: sticky;
 }
 .bg-color h3 {
     color: whitesmoke;
